<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="header">Reservation Booking</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="reset">Reset?</string>
    <string name="tagline">Welcome to my Reservation App!</string>
    <string name="smoking">Smoking</string>
    <string name="no_preference">No Preference</string>
    <string name="non_smoking">Non-smoking</string>
    <string name="size_of_group">Size of Group</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>